--- a/nn-visualization.ipynb
+++ b/nn-visualization.ipynb
@@ -38,6 +38,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import os\n",
+    "import cv2\n",
+    "from tqdm import tqdm\n",
+    "import pickle\n",
+    "import copy\n",
+    "import pickle\n",
+    "\n",
+    "# We'll be saving all the data from this model's training. \n",
+    "train_dict = {}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
